# rules_android_lint

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  maven_install.json  maven_install_test.json  renovate.json
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: buildifier.yaml  ci.yaml  main.yml  publish.yaml  release.yml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/simple-android/: AndroidManifest.xml  Foo.java  MODULE.bazel  README.md  WORKSPACE.bazel  lib_lint_test_lint_baseline.xml  lint_global.xml
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
examples/simple-android/: .bazelrc  AndroidManifest.xml  BUILD.bazel  LibManifest.xml  MODULE.bazel  TestActivity.java  WORKSPACE.bzlmod  bin_lint_test_lint_baseline.xml  lib_lint_test_lint_baseline.xml
lint/: dependencies.bzl  rules.bzl  toolchains.bzl
lint-examples/: .gitignore  BUILD  WORKSPACE  lint.xml
lint-examples/android/: BUILD  MyAndroidManifest.xml
lint-examples/android/res/values/: colors.xml
lint-examples/android/src/bazel/android/: MainActivity.kt
lint-examples/simple/: BUILD  Bar.java  Foo.java
lint/internal/: BUILD  constants.bzl  defs.bzl  dependencies.bzl  test_runner_executable.py  test_runner_template.bash  toolchains.bzl
lint/internal/worker/: BUILD  InvocationWorker.kt  PersistentWorker.kt  PersistentWorkerCpuTimeBasedGcScheduler.kt  WorkRequest.kt  WorkResponse.kt  Worker.kt  WorkerIO.kt  WorkerJsonMessageProcessor.kt
lint/internal/wrapper/: AndroidLintAction.kt  AndroidLintActionArgs.kt  AndroidLintProject.kt  AndroidLintRunner.kt  AndroidLintWrapperUtils.kt  BUILD
rules/: BUILD.bazel  android_lint.bzl  android_lint_test.bzl  attrs.bzl  collect_aar_outputs_aspect.bzl  defs.bzl  extensions.bzl  impl.bzl  lint_analysis_aspect.bzl  providers.bzl  repositories.bzl  setup.bzl  utils.bzl
scripts/: build-examples.sh  lint-shell-files.sh
src/: BUILD.bazel  android_lint_output_validator.py
src/cli/: AndroidLintAction.kt  AndroidLintActionArgs.kt  AndroidLintBaselineSanitizer.kt  AndroidLintCliInvoker.kt  AndroidLintCliInvokerCache.kt  AndroidLintPersistentWorker.kt  AndroidLintProject.kt  AndroidLintRunner.kt  AndroidLintWrapperUtils.kt  BUILD
src/worker/: BUILD  InvocationWorker.kt  PersistentWorker.kt  PersistentWorkerCpuTimeBasedGcScheduler.kt  WorkRequest.kt  WorkResponse.kt  Worker.kt  WorkerIO.kt  WorkerJsonMessageProcessor.kt
tests/: BUILD  BUILD.bazel  versions_test.bzl
tests/bashunit/: BUILD
tests/integration/: BUILD.bazel  fixture_aar.bzl  fixture_aar_builder.py  lint_report_test.bzl  report_assertion.py
tests/integration/fixtures/aar/: AndroidManifest.xml
tests/integration/fixtures/basic/: Clean.java  Dirty.java  DirtyBaseline.xml
tests/integration/fixtures/compose/androidx/compose/runtime/: Composable.kt
tests/integration/fixtures/compose/androidx/compose/ui/: Modifier.kt
tests/integration/fixtures/compose/com/example/: CleanComposables.kt  DirtyComposables.kt  Stubs.kt
tests/internal/: BUILD  test_runner_executable_tests.py
tests/internal/wrapper/: AndroidLintActionArgsTest.kt  AndroidLintActionTest.kt  AndroidLintProjectTest.kt  BUILD
tests/rules/: BUILD.bazel  Fixture.java  android_lint_analysis_test.bzl
tests/rules/fixtures/: AndroidManifest.xml
tests/rules/fixtures/res/values/: strings.xml
tests/rules/fixtures/runtime/res/layout/: runtime.xml
tests/scripts/: BUILD  android_lint_aar_scenarios_test.sh  android_lint_scenarios_test.sh  lint_helper.sh
tests/src/: BUILD.bazel  android_lint_output_validator_test.py
tests/src/cli/: AndroidLintActionArgsTest.kt  AndroidLintActionTest.kt  AndroidLintBaselineSanitizerTest.kt  AndroidLintCliInvokerCacheTest.kt  AndroidLintProjectTest.kt  AndroidLintRunnerTest.kt  BUILD
tests/src/cli/stubs/: BUILD  LintCliFlags.kt  Main.kt  UastEnvironment.kt
tests/src/worker/: BUILD  WorkerIOTest.kt  WorkerJsonMessageProcessorTest.kt  WorkerTest.kt
toolchains/: BUILD.bazel  toolchain.bzl
