module(
    name = "rules_android_lint",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_android", version = "0.6.0")
bazel_dep(name = "rules_java", version = "8.6.3")
bazel_dep(name = "rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_kotlin", version = "2.1.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "bazel_worker_api", version = "0.0.4")
bazel_dep(name = "bazel_worker_java", version = "0.0.4")

bazel_dep(name = "aspect_bazel_lib", version = "2.11.0", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.0.0", dev_dependency = True)

register_toolchains("//toolchains:android_lint_default_toolchain")

# TODO(bencodes) Lint needs to be downloaded dynamically
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "rules_android_lint_deps",
    artifacts = [
        # Testing
        "org.assertj:assertj-core:3.24.2",
        "junit:junit:4.13.2",
        # Worker Dependencies
        "com.google.protobuf:protobuf-java:4.29.0",
        "com.google.protobuf:protobuf-java-util:4.29.0",
        # Args Parsing
        "com.xenomachina:kotlin-argparser:2.0.7",
        # Lint Dependencies
        "com.android.tools.lint:lint:31.3.0-alpha09",
        "com.android.tools.lint:lint-api:31.3.0-alpha09",
        "com.android.tools.lint:lint-checks:31.3.0-alpha09",
        "com.android.tools.lint:lint-model:31.3.0-alpha09",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "rules_android_lint_deps", "unpinned_rules_android_lint_deps")
