module(
    name = "rules_android_lint",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "hermetic_android_toolchains", version = "0.2.0", dev_dependency = True)

bazel_dep(name = "rules_android", version = "0.7.3")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_kotlin", version = "2.2.2")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_worker_api", version = "0.0.11")
bazel_dep(name = "bazel_worker_java", version = "0.0.11")

# Keep in sync with the protobuf version bazel_worker_java depends on. The worker
# sources protobuf-java from this module rather than via rules_jvm_external.
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)
bazel_dep(name = "rules_bazel_integration_test", version = "0.37.1", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
use_repo(bazel_binaries, "bazel_binaries", "bazel_binaries_bazelisk", "build_bazel_bazel_.bazelversion")

android = use_extension(
    "@hermetic_android_toolchains//:extensions.bzl",
    "android",
    dev_dependency = True,
)
android.sdk(
    build_tools_version = "35.0.0",
    version = "34",
)
use_repo(android, "androidsdk")

rules_android_sdk = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension",
    dev_dependency = True,
)

override_repo(rules_android_sdk, "androidsdk")

register_toolchains(
    "@androidsdk//:all",
    dev_dependency = True,
)

register_toolchains(
    "//toolchains:android_lint_default_toolchain",
    dev_dependency = True,
)

# TODO(bencodes) Lint needs to be downloaded dynamically
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "rules_android_lint_deps",
    artifacts = [
        # Args Parsing
        "com.xenomachina:kotlin-argparser:2.0.7",
        # Lint Dependencies
        "com.android.tools.lint:lint:32.2.1",
        "com.android.tools.lint:lint-api:32.2.1",
        "com.android.tools.lint:lint-checks:32.2.1",
        "com.android.tools.lint:lint-model:32.2.1",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "rules_android_lint_deps", "unpinned_rules_android_lint_deps")

# Test-only maven dependencies, kept out of the release path.
maven_test = use_extension(
    "@rules_jvm_external//:extensions.bzl",
    "maven",
    dev_dependency = True,
)
maven_test.install(
    name = "rules_android_lint_test_deps",
    artifacts = [
        "org.assertj:assertj-core:3.24.2",
        "junit:junit:4.13.2",
        # Custom lint check used as a test fixture by //tests/scripts
        "com.slack.lint.compose:compose-lint-checks:1.5.2",
    ],
    lock_file = "//:maven_install_test.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven_test, "rules_android_lint_test_deps", "unpinned_rules_android_lint_test_deps")
