load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "android_lint_output_validator",
    srcs = ["android_lint_output_validator.py"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//tests:__subpackages__"],
)
