load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//toolchains:toolchain.bzl", "android_lint_toolchain")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

android_lint_toolchain(
    name = "android_lint_default",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "android_lint_default_toolchain",
    toolchain = ":android_lint_default",
    toolchain_type = ":toolchain_type",
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
)
