module(
    name = "examples_simple",
    version = "TODO",
)

register_toolchains("//:sample_android_lint_toolchain")

bazel_dep(name = "rules_android_lint")
local_path_override(
    module_name = "rules_android_lint",
    path = "../../",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_android", version = "0.6.0")
bazel_dep(name = "rules_jvm_external", version = "5.3")
