module(
    name = "examples_simple",
    version = "TODO",
)

register_toolchains("//:sample_android_lint_toolchain")

bazel_dep(name = "rules_android_lint")
local_path_override(
    module_name = "rules_android_lint",
    path = "../../",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_android", version = "0.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.7")

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions",
)
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    artifacts = [
        "androidx.activity:activity:1.10.1",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    use_starlark_android_rules = True,
)
use_repo(maven, "maven")
