module(
    name = "examples_simple",
    version = "TODO",
)

register_toolchains("//:sample_android_lint_toolchain")

bazel_dep(name = "rules_android_lint")
local_path_override(
    module_name = "rules_android_lint",
    path = "../../",
)

bazel_dep(name = "hermetic_android_toolchains", version = "0.2.0", dev_dependency = True)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_android", version = "0.7.3")
bazel_dep(name = "rules_jvm_external", version = "7.0")

android = use_extension("@hermetic_android_toolchains//:extensions.bzl", "android", dev_dependency = True)
android.sdk(
    build_tools_version = "35.0.0",
    version = "34",
)
use_repo(android, "androidsdk")

rules_android_sdk = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")

override_repo(rules_android_sdk, "androidsdk")

register_toolchains(
    "@androidsdk//:all",
    dev_dependency = True,
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    artifacts = [
        "androidx.activity:activity:1.10.1",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    use_starlark_android_rules = True,
)
use_repo(maven, "maven")
